--- a/src/containers/System/UserManage.scss
+++ b/src/containers/System/UserManage.scss
@@ -32,6 +32,9 @@
     outline: none;
     background: transparent;
     color: orange;
+    text-decoration: none;
+    margin-right: 3px;
+    cursor: pointer;
 }
 
 .btn-delete {
@@ -40,4 +43,7 @@
     outline: none;
     background: transparent;
     color: orange;
+    text-decoration: none;
+    margin-right: 3px;
+    cursor: pointer;
 }
